# virtualpen

./: .gitignore  README.md  io.github.androidvirtualpen.virtualpen.metainfo.xml  todo.org
android-virtual-pen/: .gitignore  PrivacyPolicy.html  settings.gradle.kts
android-virtual-pen/app/: build.gradle.kts
android-virtual-pen/app/release/: output-metadata.json
android-virtual-pen/app/release/baselineProfiles/0/: app-release.dm
android-virtual-pen/app/release/baselineProfiles/1/: app-release.dm
android-virtual-pen/app/src/androidTest/java/com/pen_input/: ExampleInstrumentedTest.java
android-virtual-pen/app/src/main/: AndroidManifest.xml
android-virtual-pen/app/src/main/java/com/pen_input/: MainActivity.java  TouchListener.java  UsbConnectedActivity.java  UsbStreamService.java
android-virtual-pen/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-virtual-pen/app/src/main/res/layout/: activity_main.xml
android-virtual-pen/app/src/main/res/values/: strings.xml  themes.xml
android-virtual-pen/app/src/main/res/values-night/: themes.xml
android-virtual-pen/app/src/main/res/xml/: accessory_filter.xml
android-virtual-pen/gradle/: libs.versions.toml
android-virtual-pen/gradle/wrapper/: gradle-wrapper.properties
deb/: .gitignore  virtual-pen-linux-host_0.1-1_amd64.deb
deb/virtual-pen-linux-host_0.1-1_amd64/DEBIAN/: control  postinst
deb/virtual-pen-linux-host_0.1-1_amd64/etc/udev/rules.d/: 60-android-virtual-pen.rules
deb/virtual-pen-linux-host_0.1-1_amd64/usr/share/applications/: android-pen-emulator.desktop
flatpak/: build.sh  io.github.androidvirtualpen.virtualpen.json  io.github.androidvirtualpen.virtualpen.metainfo.xml  org.flatpak.virtualpen.desktop  org.flatpak.virtualpen.json  org.flatpak.virtualpen.metainfo.xml  setup.sh
virtual-pen-linux-host/: .gitignore  CMakeLists.txt  LICENSE.txt  accessory.cpp  accessory.h  constants.h  displayscreentranslator.cpp  displayscreentranslator.h  error.c  error.h  filepermissionvalidator.cpp  filepermissionvalidator.h  hid.cpp  hid.h  icon.qrc  linux-adk.cpp  linux-adk.h  log.c  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pressuretranslator.cpp  pressuretranslator.h  udevdialog.ui  uinput.c  uinput.h  virtualstylus.cpp  virtualstylus.h
virtual-pen-linux-host/resources/: io.github.androidvirtualpen.virtualpen.metainfo.xml
(+5 files in other folders)
